[tool.poetry]
name = "reviews"
version = "0.1.0"
description = ""
authors = ["Yoojin Ko <yoo.ko@sky.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feast = {extras = ["gcp"], version = "^0.34.1"}
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
